@@ -1,0 +1,13 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item android:drawable="@drawable/button_normal"
+        android:state_enabled="false"/>
+    <item android:drawable="@drawable/button_pressed"
+        android:state_enabled="true" android:state_pressed="true"/>
+    <item android:drawable="@drawable/button_pressed"
+        android:state_enabled="true" android:state_focused="true"/>
+    <item android:drawable="@drawable/button_normal"
+        android:state_enabled="true"/>
+
+</selector>
